k8s/traefik-minikube-ingress/04-traefik-ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`mini.kube`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: iioat
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik-ui.kube`) && PathPrefix(`/dashboard/`)
    kind: Rule
    services:
    - name: traefik
      port: 80
